--- a/about_us.html
+++ b/about_us.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="navbar.css">
   <title>Galaxy Wonders - About us</title>
   </style>
+  <style>
+            .center {
+            text-align: center; /* لوضع النص في المنتصف */
+        }
+  </style>
 </head>
 <body>
 
